# traexis

./: Cargo.toml  config.json  readme.md
logic/: Cargo.toml
logic/src/: bitboard.rs  lib.rs  queue.rs  tetromino.rs
src/: app.rs  config.rs  main.rs
src/client/: atlas.rs  axes.rs  camera.rs  grid_lines.rs  linear_algebra.rs  mod.rs  renderable.rs  vertex.rs
src/client/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/graphics/: app.rs  camera.rs  linear_algebra.rs  mod.rs  renderable.rs  vertex.rs  window.rs
src/graphics/shaders/: fragment_shader.glsl  vertex_shader.glsl
traexis-core/: Cargo.toml
traexis-core/src/: action.rs  layer.rs  lib.rs  tetromino.rs
traexis-core/src/piece/: mod.rs  shapes.rs
traexis-core/src/queue/: mod.rs  pattern.rs
treaxis-core/: Cargo.toml
treaxis-core/src/: bitboard.rs  lib.rs
treaxis-core/src/piece/: mod.rs  shapes.rs
treaxis-core/src/queue/: mod.rs  pattern.rs  tetromino.rs
