[package]
name = "traexis"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["traexis-core"]

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
strum = "0.26.3"
glium = "0.35.0"
nalgebra = "0.33.0"
regex = "1.10.6"
treaxis-core = { path = "traexis-core" }
rand = "0.8.5"
image = "0.25.4"
